# ThreadWatcher

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  vcpkg.json
src/: CMakeLists.txt
src/ThreadWatcher/: IFunction.h  Process.cpp  Process.h  ThreadProcess.cpp  ThreadProcess.h  ThreadWatcher.cpp  ThreadWatcher.h
test/: CMakeLists.txt  TestProcess.cpp  TestThreadWatcher.cpp  Util.h
